<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/ic_menu_bg">
        <TextView
            android:id="@+id/tv_menu_create"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/new_build_file"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:layout_marginTop="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_create_folder"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
        <TextView
            android:id="@+id/tv_menu_delete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/delete_file"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_delete"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
        <TextView
            android:id="@+id/tv_menu_copy"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/copy_file"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_copy"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
        <TextView
            android:id="@+id/tv_menu_select_mode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/multiple_choice"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_select_mode"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
        <TextView
            android:id="@+id/tv_menu_rename"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/rename"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_rename"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
        <TextView
            android:id="@+id/tv_menu_file_info"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/file_info"
            android:gravity="center_vertical|right"
            android:textSize="35sp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_file_info"
            android:textColor="@android:color/white"
            android:background="@drawable/selector_window_menu"/>
    </LinearLayout>
</RelativeLayout>