<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_fragment_bg">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:drawableLeft="@mipmap/ic_back"
        android:paddingLeft="10dp"
        android:text="@string/setting"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"/>

    <RelativeLayout
        android:id="@+id/rl_pic"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/selector_item_focus">
        <TextView
            android:id="@+id/tv_pic_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_pic"
            android:textSize="45sp"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/tv_pic_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_pic_des"
            android:textSize="25sp"
            android:layout_toRightOf="@+id/tv_pic_setting"
            android:textColor="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:layout_alignParentBottom="true"/>
        <CheckBox
            android:id="@+id/ch_pic_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:clickable="false"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@color/color3"/>
    <RelativeLayout
        android:id="@+id/rl_usb"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="@drawable/selector_item_focus">
        <TextView
            android:id="@+id/tv_usb_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_usb"
            android:textSize="45sp"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/tv_usb_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_usb_des"
            android:textSize="25sp"
            android:layout_toRightOf="@+id/tv_usb_setting"
            android:textColor="@android:color/darker_gray"
            android:paddingLeft="5dp"
            android:layout_alignParentBottom="true"/>
        <CheckBox
            android:id="@+id/ch_usb_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <View
        android:id="@+id/v_enter"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>
    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/setting_hint"
        android:layout_marginRight="55dp"
        android:textColor="@color/color3"
        android:visibility="gone"/>
</LinearLayout>