<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/color2">
        <TextView
            android:id="@+id/tv_disk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disk"
            android:gravity="center"
            android:textSize="25sp"
            android:focusable="true"
            android:nextFocusDown="@+id/srl_file_item"
            android:focusableInTouchMode="true"
            android:textColor="@drawable/selector_menu_text_focus"
            android:layout_alignParentBottom="true"
            android:nextFocusLeft="@id/tv_disk"
            android:nextFocusUp="@id/tv_disk"
            android:paddingBottom="5dp"
            android:drawablePadding="5dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="5dp">
            <TextView
                android:id="@+id/btn_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/all_file"
                android:textSize="25sp"
                android:gravity="center_horizontal"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:nextFocusUp="@id/btn_all"
                android:drawablePadding="5dp"
                android:nextFocusDown="@+id/srl_file_item"
                android:focusableInTouchMode="true"/>
            <TextView
                android:id="@+id/btn_video"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/video"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_video"
                android:gravity="center_horizontal"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:drawablePadding="5dp"
                android:nextFocusDown="@+id/srl_file_item"
                android:focusableInTouchMode="true"/>
            <TextView
                android:id="@+id/btn_music"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/music"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_music"
                android:nextFocusDown="@+id/srl_file_item"
                android:gravity="center_horizontal"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <TextView
                android:id="@+id/btn_picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/picture"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_picture"
                android:nextFocusDown="@+id/srl_file_item"
                android:gravity="center_horizontal"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <TextView
                android:id="@+id/btn_office"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/office"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_office"
                android:nextFocusDown="@+id/srl_file_item"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/btn_install"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/install"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_install"
                android:nextFocusDown="@+id/srl_file_item"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_clear"
                android:textColor="@drawable/selector_menu_text_focus"
                android:layout_marginRight="20dp"
                android:drawablePadding="5dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/btn_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/uninstall"
                android:textSize="25sp"
                android:nextFocusUp="@id/btn_uninstall"
                android:textColor="@drawable/selector_menu_text_focus"
                android:drawablePadding="5dp"
                android:gravity="center_horizontal"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_setting"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:focusable="true"
            android:layout_marginBottom="10dp"
            android:focusableInTouchMode="true"
            android:layout_alignParentBottom="true"
            android:nextFocusUp="@id/btn_setting"
            android:nextFocusRight="@id/btn_setting"
            android:background="@drawable/selector_setting_focus"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_path_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/color1">
        <TextView
            android:id="@+id/tv_path"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="sdcard/"
            android:textSize="20sp"
            android:singleLine="true"
            android:maxLines="1"
            android:ellipsize="marquee"
            android:gravity="center_vertical"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/btn_sort"
            android:textColor="@android:color/white"/>
        <Button
            android:id="@+id/btn_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:focusable="true"
            android:nextFocusRight="@id/btn_sort"
            android:focusableInTouchMode="true"
            android:background="@drawable/selector_sort_focus"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@mipmap/ic_fragment_bg">
    </FrameLayout>
</LinearLayout>
