<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color6">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="400dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:background="@mipmap/ic_fragment_bg">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/select_file"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"/>
        <TextView
            android:id="@+id/tv_back_parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/back_up"
            android:gravity="center_vertical"
            android:textSize="25sp"
            android:focusable="true"
            android:visibility="gone"
            android:focusableInTouchMode="true"
            android:drawableLeft="@mipmap/ic_back_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="20dp"
            android:drawablePadding="10dp"
            android:textColor="@android:color/white"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_file_select"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:paddingTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_select_path"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="----"
                android:gravity="center_vertical"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:drawablePadding="10dp"
                android:textColor="@android:color/white"/>
            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="25sp"
                android:text="@string/sure"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:textColor="@android:color/white"
                android:layout_height="match_parent"
                android:background="@drawable/selector_window_selector_sure"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>